2012-09-07 Tsi YANG <tsi@in-cite.net>
	* Feature: Added stat download on list and single view.

2012-09-06 Tsi YANG <tsi@in-cite.net>
	* Fix: Retrieved licence's label.	

2012-08-10 Tsi YANG <tsi@in-cite.net>
	* Feature: Added tiers restriction.
	* Fix: Files error validated infos.

2012-08-09 Tsi YANG <tsi@in-cite.net>
	* Fix: Error validated form marker.
	* Feature: File list column file/url label.
	* Fix: Filemount display.

2012-08-07 Tsi YANG <tsi@in-cite.net>
	* Feature: Added filegroup's title label_userFunc.

2012-08-06 Tsi YANG <tsi@in-cite.net>
	* Feature: Adapted TCA FE Refactoring.

2012-08-02 Tsi YANG <tsi@in-cite.net>
	* Feature: Added configuration :for requireEntryLabel.
	* Feature: Added previous loccalang.

2012-07-30 Tsi YANG <tsi@in-cite.net>
	* Comments: Added singleDatasetOptionList comment.

2012-07-27 Tsi YANG <tsi@in-cite.net>
	* Feature: Implemented file and url render value and added typoscript configuration.
	* Feature: Implemented extra_controlEntries hook to control tiers entries.

2012-07-20 Tsi YANG <tsi@in-cite.net>
	* Feature: Added backlink configuration.
	* Feature: Added actions configuration.

2012-07-16 Tsi YANG <tsi@in-cite.net>
	* Fix: Action new file on dataset single view.

2012-07-12 Tsi YANG <tsi@in-cite.net>
	* Refactor: Renamed conf[table][select_filegroup] to conf[table][dataset].
	* Feature: Implements single dataset actions "new"/"edit" and added Typoscript configuration.
	* Feature: Added config files template.
	* Feature: Added control to process datasets and files views.
	* Feature: Implements handleFormField hook for field filegroup on table tx_icsoddatastore_files.

2012-07-06 Tsi YANG <tsi@in-cite.net>
	* Feature: Implemented get_TCAFE_Admin_actions_data hook for table tx_icsoddatastore_files
	* Feature: Added Typoscript for tx_icsoddatastore_files list view calling from tx_icsoddatastore_filegroups

2012-07-05 Tsi YANG <tsi@in-cite.net>
	* Feature: Optimized TCA.