@@ -18,6 +18,7 @@
 			<label index="files_form_info">Fill form with required entries *.</label>
 			<label index="previous">Previous</label>
 			<label index="stat_dl">Stats download</label>
+			<label index="sort_stat_dl">Most downloaded</label>
 		</languageKey>
 		<languageKey index="fr" type="array">
 			<label index="anyUser">Identifiez-vous avant de continuer.</label>
@@ -31,6 +32,7 @@
 			<label index="files_form_info">Veuillez remplir le formulaire en complétant les champs obligatoires *.</label>
 			<label index="previous">Retour</label>
 			<label index="stat_dl">Téléchargements</label>
+			<label index="sort_stat_dl">Popularité</label>
 		</languageKey>
 	</data>
 </T3locallang>
