@@ -41,6 +41,15 @@
 				</div>
 				<!-- ###TIERS_ITEM### end -->
 			</div>
+			<h3 class="###PREFIXID###_titleLicences">###TITLE_LICENCES###</h3>			
+			<div class="###PREFIXID###_licences">
+				<!-- ###LICENCES_ITEM### start -->
+				<div class="###PREFIXID###_licencesItem">
+					<input id="###PREFIXID###_licences###LICENCE_VALUE###" name="###PREFIXID###[licences][]" type="checkbox" ###CHECKED### value="###LICENCE_VALUE###">
+					<label for="###PREFIXID###_licences###LICENCE_VALUE###">###LICENCE_LABEL###</label>
+				</div>
+				<!-- ###LICENCES_ITEM### end -->
+			</div>
 		</div>
 		
 		<div class="button">
