@@ -1,3 +1,8 @@
+2012-09-10 Tsi YANG <tsi@in-cite.net>
+	* Feature: Added filter on licence.
+	* Feature: Implemented sorting on research block.
+	* Feature: Added filter on crdate and stat download.
+
 2012-09-07 Tsi YANG <tsi@in-cite.net>
 	* Feature: Added stat download on list and single view.
 
